Makes font size configurable

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,26 +25,26 @@
 <div class="pillars">
   <div class="site-pillar">
     <app-icon [icon]="pillarOneIcon"></app-icon>
-    <h3 class="pillar-name">Efficient</h3>
-    <span>Inefficiency breeds latency and no one will use a slow site</span>
+    <h2 class="pillar-name">Efficient</h2>
+    <h6>Inefficiency breeds latency and no one will use a slow site</h6>
   </div>
   
   <div class="site-pillar">
     <app-icon [icon]="pillarTwoIcon"></app-icon>
-    <h3 class="pillar-name">Responsive</h3>
-    <span>Reach as many users as possible with dynamic layouts fit for all devices</span>
+    <h2 class="pillar-name">Responsive</h2>
+    <h6>Reach as many users as possible with dynamic layouts fit for all devices</h6>
   </div>
   
   <div class="site-pillar">
     <app-icon [icon]="pillarThreeIcon"></app-icon>
-    <h3 class="pillar-name">Flexible</h3>
-    <span>Change happens daily and my websites are always ready to adapt to your needs</span>
+    <h2 class="pillar-name">Flexible</h2>
+    <h6>Change happens daily and my websites are always ready to adapt to your needs</h6>
   </div>
   
   <div class="site-pillar">
       <app-icon [icon]="pillarFourIcon"></app-icon>
-    <h3 class="pillar-name">Intuitive</h3>
-    <span>User friendly to the max, no tour or explanation necessary</span>
+    <h2 class="pillar-name">Intuitive</h2>
+    <h6>User friendly to the max, no tour or explanation necessary</h6>
   </div>
 </div>
 
@@ -76,7 +76,7 @@
   </div>
 
   <div>
-    <p>"{{ currEndorsement.comment }}"</p>
+    <h3>"{{ currEndorsement.comment }}"</h3>
     <div class="details">
       <h4>- {{ currEndorsement.name }} ({{ currEndorsement.location }})</h4>
       <h5>{{ currEndorsement.relationship }} {{ currEndorsement.type === 'project' ? 'on' : 'at' }} {{ currEndorsement.connection }}</h5>
