--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -90,17 +90,17 @@
     margin: 10px;
     padding: 15px;
 
-    .pillar-name {
-      font-size: 24px;
+    h2 {
+      text-align: center;
     }
 
-    h3, span {
-      // color: var(--secondary-text-color) !important;
+    h6 {
+      margin: 0;
       text-align: center;
     }
 
     app-icon {
-      font-size: 25px;
+      font-size: var(--lg-header-text);
     }
   }
 
@@ -151,9 +151,8 @@
     }
   }
   
-  p {
+  h3 {
     color: var(--secondary-text-color);
-    font-size: 24px;
     font-style: italic;
     margin: 0;
     padding: 25px;
