--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,6 +24,10 @@
     display: flex;
     margin: auto 0;
     text-decoration: none;
+
+    h3 {
+      margin: 0;
+    }
     
     img {
       border-radius: 50%;
