--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -4,7 +4,7 @@
   border: none;
   border-radius: var(--default-border-radius);
   padding: 8px 16px;
-  font-size: 16px;
+  font-size: var(--large-text);
   cursor: pointer;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
   text-transform: uppercase;
@@ -19,7 +19,7 @@
   box-sizing: border-box;
   color: var(--secondary-btn-text);
   border: none;
-  font-size: 12px;
+  font-size: var(--large-text);
   cursor: pointer;
   text-transform: uppercase;
   height: 100%;
