--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,27 @@ span, p, ul, ol, h1, h2, h3, h4, h5, h6, a {
   font-family: var(--font-family);
 }
 
+span, p, ul, ol {
+  font-size: var(--regular-text);
+}
+
+h4, h5, h6 {
+  font-size: var(--large-text);
+  font-weight: normal;
+}
+
+h3 {
+  font-size: var(--subheader-text);
+}
+
+h2 {
+  font-size: var(--header-text);
+}
+
+h1 {
+  font-size: var(--lg-header-text);
+}
+
 button {
   font-family: var(--font-family);
 }
