--- a/src/app/style/style.component.html
+++ b/src/app/style/style.component.html
@@ -47,4 +47,13 @@
       <mat-option value="marker">Marker</mat-option>
     </mat-select>
   </div>
+
+  <h4>Spacing</h4>
+  <div class="control">
+    <mat-select [formControl]="spacingSizeSelector">
+      <mat-option value="small-spacing">Small</mat-option>
+      <mat-option value=""> Medium (Default)</mat-option>
+      <mat-option value="large-spacing">Large</mat-option>
+    </mat-select>
+  </div>
 </div>
