--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
   left: 0;
   bottom: 0;
-  padding: 0 10px;
+  padding: 0 var(--sm-spacing);
   position: fixed;
   width: 100%;
   z-index: 3000;
@@ -27,10 +27,6 @@
 .footer-item {
   align-items: center;
   display: flex;
-}
-
-img {
-  margin: 0 8px;
 }
 
 .audio-button {
