--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -6,7 +6,7 @@
 
 .portfolio-item {
   @include clickable-card;
-  padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 .project-header {
@@ -17,7 +17,7 @@
   width: 100%;
 
   h1 {
-    padding: 0 20px;
+    padding: 0 var(--md-spacing);
   }
   
   img {
@@ -35,7 +35,7 @@
   justify-content: center;
   width: 100%;
   margin: 0;
-  padding: 5px 0 15px 0;
+  padding: var(--xs-spacing) 0 var(--md-spacing) 0;
 
   li {
     flex: auto;
@@ -58,7 +58,7 @@
   grid-template-columns: 50% 50%;
 
   div {
-    padding: 0 5px;
+    padding: 0 var(--xs-spacing);
   }
 
   h3 {
@@ -75,7 +75,7 @@
 }
 
 h3 {
-  margin-bottom: 5px;
+  margin-bottom: var(--xs-spacing);
 }
 
 .technologies {
