--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -3,8 +3,8 @@
   color: var(--primary-btn-text);
   border: none;
   border-radius: var(--default-border-radius);
-  padding: 8px 16px;
-  font-size: var(--large-text);
+  padding: var(--sm-spacing) var(--md-spacing);
+  font-size: var(--regular-text);
   cursor: pointer;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
   text-transform: uppercase;
@@ -19,11 +19,11 @@
   box-sizing: border-box;
   color: var(--secondary-btn-text);
   border: none;
-  font-size: var(--large-text);
+  font-size: var(--regular-text);
   cursor: pointer;
   text-transform: uppercase;
   height: 100%;
-  padding: 0 15px;
+  padding: 0 var(--md-spacing);
 
   &:hover {
     background-color: var(--button-hover-bg);
