--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -3,14 +3,14 @@
   box-sizing: border-box;
   display: block;
   min-height: 100vh;
-  padding: 15px;
+  padding: var(--md-spacing);
   padding-bottom: calc(1.5 * var(--banner-height));
   padding-top: var(--banner-height);
   position: relative;
 }
 
 @mixin standard-img {
-  margin: 0 8px;
+  margin: 0 var(--sm-spacing);
   height: 30px;
 }
 
@@ -21,9 +21,9 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  margin: 20px auto;
+  margin: var(--md-spacing) auto;
   max-width: 800px;
-  padding: 10px;
+  padding: var(--sm-spacing);
 }
 
 @mixin clickable-card {
@@ -43,6 +43,6 @@
   border-bottom-right-radius: var(--default-border-radius);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
-  padding: 5px 10px;
+  padding: var(--xs-spacing) var(--sm-spacing);
   width: 100%;
 }
