Refactors variable names for readability

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -100,7 +100,7 @@
     }
 
     app-icon {
-      font-size: var(--lg-header-text);
+      font-size: var(--xl-text);
       padding: 0;
     }
   }
