--- a/src/app/style/style.component.html
+++ b/src/app/style/style.component.html
@@ -30,9 +30,9 @@
   <div class="control">
     <mat-select [formControl]="fontSizeSelector">
       <mat-option value="xs-text">Extra Small</mat-option>
-      <mat-option value="small-text">Small</mat-option>
+      <mat-option value="sm-text">Small</mat-option>
       <mat-option value="">Medium (Default)</mat-option>
-      <mat-option value="large-text">Large</mat-option>
+      <mat-option value="lg-text">Large</mat-option>
       <mat-option value="xl-text">Extra Large</mat-option>
     </mat-select>
   </div>
@@ -52,7 +52,7 @@
   <div class="control">
     <mat-select [formControl]="spacingSizeSelector">
       <mat-option value="small-spacing">Small</mat-option>
-      <mat-option value=""> Medium (Default)</mat-option>
+      <mat-option value="">Medium (Default)</mat-option>
       <mat-option value="large-spacing">Large</mat-option>
     </mat-select>
   </div>
