--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,11 +19,11 @@ body {
 
   --default-border-radius: 8px;
 
-  --regular-text: 14px;
-  --large-text: 16px;
-  --subheader-text: 20px;
-  --header-text: 24px;
-  --lg-header-text: 32px;
+  --xs-text: 14px;
+  --sm-text: 16px;
+  --md-text: 20px;
+  --lg-text: 24px;
+  --xl-text: 32px;
 
   --xs-spacing: 5px;
   --sm-spacing: 10px;
@@ -81,32 +81,32 @@ body.marker {
 
 // font sizes
 body.xs-text {
-  --regular-text: 8px;
-  --large-text: 10px;
-  --subheader-text: 14px;
-  --header-text: 16px;
-  --lg-header-text: 20px;
+  --xs-text: 8px;
+  --sm-text: 10px;
+  --md-text: 14px;
+  --lg-text: 16px;
+  --xl-text: 20px;
 }
-body.small-text {
-  --regular-text: 11px;
-  --large-text: 13px;
-  --subheader-text: 17px;
-  --header-text: 20px;
-  --lg-header-text: 26px;
+body.sm-text {
+  --xs-text: 11px;
+  --sm-text: 13px;
+  --md-text: 17px;
+  --lg-text: 20px;
+  --xl-text: 26px;
 }
-body.large-text {
-  --regular-text: 17px;
-  --large-text: 19px;
-  --subheader-text: 23px;
-  --header-text: 28px;
-  --lg-header-text: 38px;
+body.lg-text {
+  --xs-text: 17px;
+  --sm-text: 19px;
+  --md-text: 23px;
+  --lg-text: 28px;
+  --xl-text: 38px;
 }
 body.xl-text {
-  --regular-text: 20px;
-  --large-text: 22px;
-  --subheader-text: 26px;
-  --header-text: 32px;
-  --lg-header-text: 44px;
+  --xs-text: 20px;
+  --sm-text: 22px;
+  --md-text: 26px;
+  --lg-text: 32px;
+  --xl-text: 44px;
 }
 
 // spacing sizes
