--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <h1 class="section-header">About Me</h1>
 <div class="about-me">
   <div>
-    <h3>I am a former collegiate football player, a 4.0 student and someone who gets the job done. I am willing to do whatever it takes to achieve my goals.You'll find that I am a man who loves a challenge. A man who is constantly growing and striving to be better than the day before.</h3>
+    <h3>As a 2x Division III Academic All-American, I know what it takes to the job done no matter what. I am driven and relentless in pursuing my goals. You'll find that I am a man who loves a challenge. A man who is constantly growing and striving to be better than the day before.</h3>
     <img src="assets/personal-photos/campbell-summit.jpg" alt="campbell-summit" fetchpriority="high">
   </div>
 
@@ -9,13 +9,13 @@
   
   <div class="inverted-background">
     <img src="assets/personal-photos/beach.jpeg" alt="beach" fetchpriority="high" />
-    <h3>Patience, perseverance, and consistency are just a few of the values I live by. I am a student of life, humbled through experience and eager to learn. I am a problem solver, life liver, and go getter. In working with me, you will find that I am driven, well organized, and extremely effective. I have learned a variety of skills from many disparate experiences.</h3>
+    <h3>Patience, perseverance, and consistency are just a few of the values I live by. I am a student of life, humbled through experience and eager to learn. I am a problem solver, life liver, and go getter. In working with me, you will find that I am extremely well organized and effective. I have learned a variety of skills from many disparate experiences.</h3>
   </div>
   
   <app-separator [inverted]="true"></app-separator>
   
   <div>
-    <h3>I love to exercise and compete. I give everything I have in everything I do. I am passionate about my health. I enjoy golfing, hiking, skiing, lifting and running. I am a reader, painter and a student of life. We all have finite time on this Earth, so let's make the most of it. Connect with me today so we can pull each other forward!</h3>
+    <h3>I love to exercise and compete. I give everything I have in everything I do. I am passionate about my health. I enjoy golfing, hiking, skiing, lifting and running. I am an avid reader and painter. We all have finite time on this Earth, so let's make the most of it. Connect with me today so we can pull each other forward!</h3>
     <img src="assets/personal-photos/golf.jpeg" alt="golf" fetchpriority="high" />
   </div>
 </div>
@@ -52,8 +52,8 @@
 
 <div class="supporting-details">
   <h2>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/style">styles</a> to make your experience unique.</h2>
-  
-  <h2>Let's build something beautiful together. I relish the opportunity to work with you to help turn your vision into a reality. Nothing is more rewarding than solving a complex problem and delivering a solution you'll love.</h2>
+  <h2>Let's build something beautiful together. I relish the opportunity to help turn your vision into a reality. My professional passion is building elegant products that improve lives.</h2>
+  <h2>Nothing is more rewarding than solving a complex problem and delivering a solution you'll love.</h2>
 </div>
 
 
