--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,7 +8,7 @@
   <app-separator></app-separator>
   
   <div class="inverted-background">
-    <img src="assets/personal-photos/beach.jpeg" alt="beach" fetchpriority="high" />
+    <img src="assets/personal-photos/beach.jpg" alt="beach" fetchpriority="high" />
     <h3>Patience, perseverance, and consistency are just a few of the values I live by. I am a student of life, humbled through experience and eager to learn. I am a problem solver, life liver, and go getter. In working with me, you will find that I am extremely well organized and effective. I have learned a variety of skills from many disparate experiences.</h3>
   </div>
   
@@ -16,7 +16,7 @@
   
   <div>
     <h3>I love to exercise and compete. I give everything I have in everything I do. I am passionate about my health. I enjoy golfing, hiking, skiing, lifting and running. I am an avid reader and painter. We all have finite time on this Earth, so let's make the most of it. Connect with me today so we can pull each other forward!</h3>
-    <img src="assets/personal-photos/golf.jpeg" alt="golf" fetchpriority="high" />
+    <img src="assets/personal-photos/golf.jpg" alt="golf" fetchpriority="high" />
   </div>
 </div>
 
