--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <a class="site-title" href="https://github.com/Zambelli24" target="_blank" rel="noopener noreferrer">
-  <img src="assets/personal-photos/avatar.jpeg" alt="Site avatar" />
+  <img src="assets/personal-photos/avatar.jpg" alt="Site avatar" />
   <h3>Nick Zambelli</h3>
 </a>
 <app-navigation-menu></app-navigation-menu>
