--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -17,7 +17,7 @@
   width: 100%;
 
   h1 {
-    padding: 0 var(--md-spacing);
+    padding: 0 var(--sm-spacing);
   }
   
   img {
@@ -32,24 +32,11 @@
 
 .project-images {
   display: flex;
-  justify-content: center;
-  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-around;
   margin: 0;
   padding: var(--xs-spacing) 0 var(--md-spacing) 0;
-
-  li {
-    flex: auto;
-    position: relative;
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  img {
-    object-fit: cover;
-    width: 100%;
-    vertical-align: middle;
-    margin: 0;
-  }
+  width: 100%;
 }
 
 .project-details {
