Adds details to about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -42,7 +42,7 @@
   </div>
   
   <div class="site-pillar">
-      <app-icon [icon]="pillarFourIcon"></app-icon>
+    <app-icon [icon]="pillarFourIcon"></app-icon>
     <h2 class="pillar-name">Intuitive</h2>
     <h6>User friendly to the max, no tour or explanation necessary</h6>
   </div>
@@ -52,8 +52,15 @@
 
 <div class="supporting-details">
   <h2>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/style">styles</a> to make your experience unique.</h2>
-  <h2>Let's build something beautiful together. I relish the opportunity to help turn your vision into a reality. My professional passion is building elegant products that improve lives.</h2>
-  <h2>Nothing is more rewarding than solving a complex problem and delivering a solution you'll love.</h2>
+  <h2>I am a world class engineer capable of providing tremendous value in addition to frontend development which includes:</h2>
+
+  <h3>Designing a clear and simple UX for an optimal user experience</h3>
+  <h3>Delivering world class code lowering the cost to implement new features and "keep the lights on"</h3>
+  <h3>Addressing an entire solution architecture executing complete refactors as necessary</h3>
+  <h3>Implementing efficient data structures to optimize performance</h3>
+  <h3>Providing expertise and consultation on development considerations</h3>
+
+  <h2>My professional passion is building elegant products that improve lives. Nothing is more rewarding than solving a complex problem and delivering a solution you'll love.</h2>
 </div>
 
 
