--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,11 +54,11 @@
   <h2>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/style">styles</a> to make your experience unique.</h2>
   <h2>I am a world class engineer capable of providing tremendous value in addition to frontend development which includes:</h2>
 
-  <h3>Designing a clear and simple UX for an optimal user experience</h3>
-  <h3>Delivering world class code lowering the cost to implement new features and "keep the lights on"</h3>
-  <h3>Addressing an entire solution architecture executing complete refactors as necessary</h3>
-  <h3>Implementing efficient data structures to optimize performance</h3>
-  <h3>Providing expertise and consultation on development considerations</h3>
+  <h3>UX design focused on the user and outcome</h3>
+  <h3>Solution architecture and re-architecture</h3>
+  <h3>API development</h3>
+  <h3>Database design</h3>
+  <h3>Consultation on development and processes</h3>
 
   <h2>My professional passion is building elegant products that improve lives. Nothing is more rewarding than solving a complex problem and delivering a solution you'll love.</h2>
 </div>
