Adjusts style and uses instrumental for music

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -51,7 +51,7 @@
 <app-separator [inverted]="true"></app-separator>
 
 <div class="supporting-details">
-  <h2>This site was written in Angular from scratch using advanced techniques. Change the <a href="/personal-website/style">styles</a> to make your experience unique.</h2>
+  <h2 class="choose-style">Choose your <a href="/personal-website/style">style</a></h2>
   <h2>I am a world class engineer capable of providing tremendous value in addition to frontend development which includes:</h2>
 
   <h3>UX design focused on the user and outcome</h3>
