--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -35,7 +35,7 @@ body {
 body.dark {
   --primary-color: #333;
   --secondary-color: white;
-  --tertiary-color: #333;
+  --tertiary-color: #BBB;
   --text-color: white;
   --secondary-text-color: #333;
   --primary-btn-color: #BAFAFF;
