Simplifies wording and follows more standard linking behavior

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <h1 class="section-header">About Me</h1>
 <div class="about-me">
   <div>
-    <h3>As a 2x Division III Academic All-American, I know what it takes to the job done no matter what. I am driven and relentless in pursuing my goals. You'll find that I am a man who loves a challenge. A man who is constantly growing and striving to be better than the day before.</h3>
+    <h2 class="text">I am 2x Division III Academic All-American and a 4.0 student. I know what it takes to the job done.</h2>
     <img src="assets/personal-photos/campbell-summit.jpg" alt="campbell-summit" fetchpriority="high">
   </div>
 
@@ -9,13 +9,13 @@
   
   <div class="inverted-background">
     <img src="assets/personal-photos/beach.jpg" alt="beach" fetchpriority="high" />
-    <h3>Patience, perseverance, and consistency are just a few of the values I live by. I am a student of life, humbled through experience and eager to learn. I am a problem solver, life liver, and go getter. In working with me, you will find that I am extremely well organized and effective. I have learned a variety of skills from many disparate experiences.</h3>
+    <h2 class="text">Patient, driven, and consistent. Nothing is given, everything is earned. I am a student of life, humbled through experience and eager to learn.</h2>
   </div>
   
   <app-separator [inverted]="true"></app-separator>
   
   <div>
-    <h3>I love to exercise and compete. I give everything I have in everything I do. I am passionate about my health. I enjoy golfing, hiking, skiing, lifting and running. I am an avid reader and painter. We all have finite time on this Earth, so let's make the most of it. Connect with me today so we can pull each other forward!</h3>
+    <h2 class="text">We all have finite time on this Earth, so let's make the most of it. Connect with me today so we can pull each other forward!</h2>
     <img src="assets/personal-photos/golf.jpg" alt="golf" fetchpriority="high" />
   </div>
 </div>
@@ -32,13 +32,13 @@
   <div class="site-pillar">
     <app-icon [icon]="pillarTwoIcon"></app-icon>
     <h2 class="pillar-name">Responsive</h2>
-    <h6>Reach as many users as possible with dynamic layouts fit for all devices</h6>
+    <h6>Reach more users with dynamic layouts fit for all devices</h6>
   </div>
   
   <div class="site-pillar">
     <app-icon [icon]="pillarThreeIcon"></app-icon>
     <h2 class="pillar-name">Flexible</h2>
-    <h6>Change happens daily and my websites are always ready to adapt to your needs</h6>
+    <h6>Always ready to adapt to changing needs</h6>
   </div>
   
   <div class="site-pillar">
