--- a/src/app/style/style.component.html
+++ b/src/app/style/style.component.html
@@ -1,4 +1,4 @@
-<h3>What better way to show off the modularity and configurability that I strive for in all my work? Change these settings however you like to make your experience on my site unique. Imagine what can be done with your vision!</h3>
+<h3>This is just a taste of the modularity and configurability that I strive for in all my work. Imagine what we can do with your vision!</h3>
 
 <div class="setting-options">
   <h4>Color Fade</h4>
