--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<a class="site-title" href="https://github.com/Zambelli24" target="_blank" rel="noopener noreferrer">
+<a class="site-title" routerLink="/">
   <img src="assets/personal-photos/avatar.jpg" alt="Site avatar" />
   <h3>Nick Zambelli</h3>
 </a>
