--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <h1 class="section-header">About Me</h1>
 <div class="about-me">
   <div>
-    <h2 class="text">I am 2x Division III Academic All-American and a 4.0 student. I know what it takes to the job done.</h2>
+    <h2 class="text">I am 2x Division III Academic All-American and a 4.0 student. I know what it takes to get the job done.</h2>
     <img src="assets/personal-photos/campbell-summit.jpg" alt="campbell-summit" fetchpriority="high">
   </div>
 
